[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/single_day_dynamic.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/single_day_large.tres" type="DynamicFont" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -6.10352e-05
margin_right = 1117.0
margin_bottom = 796.0
color = Color( 0.289062, 0.276642, 0.276642, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 130.688
custom_fonts/font = ExtResource( 3 )
text = "Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 200.0
margin_top = 600.0
margin_right = 920.0
margin_bottom = 730.0
custom_fonts/font = ExtResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersLabel" type="Label" parent="."]
margin_left = 200.0
margin_top = 140.0
margin_right = 400.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 1 )
text = "Players:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeLabel" type="Label" parent="."]
margin_left = 470.856
margin_top = 140.0
margin_right = 660.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 1 )
text = "Room code:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Label" parent="."]
margin_left = 603.0
margin_top = 90.0
margin_right = 871.0
margin_bottom = 191.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 920.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_right = 720.0
margin_bottom = 370.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 720.0
margin_bottom = 360.0
rect_min_size = Vector2( 720, 360 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
